--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
 
         <div class="row contact__main">
             <div class="col-eight tab-full contact__form">
-                <form name="contact"  id="contactForm" method="POST" netlify-honeypot="bot-field" data-netlify="true">
+                <form name="contact"  id="contactForm" method="POST" data-netlify="true">
                     <fieldset>
     
                     <div class="form-field">
@@ -642,16 +642,13 @@
                     <div class="form-field">
                         <input input type="email" name="email"  id="contactEmail" placeholder="Email" value="" required="" aria-required="true" class="full-width">
                     </div>
-
-                    <p class="hidden">
-                   <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
-                     </p>
                     <div class="form-field">
                         <input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="" class="full-width">
                     </div>
                     <div class="form-field">
                         <textarea name="contactMessage" id="contactMessage" placeholder="message" rows="10" cols="50" required="" aria-required="true" class="full-width"></textarea>
                     </div>
+                    <div data-netlify-recaptcha="true"></div>
                     <div class="form-field">
                         <button class="full-width btn--primary">Submit</button>
                         <div class="submit-loader">
