--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
 
         <div class="row contact__main">
             <div class="col-eight tab-full contact__form">
-                <form name="contact"  id="contactForm" method="POST" data-netlify="true">
+                <form name="contact" action="/thank-you.html" id="contactForm" method="POST" data-netlify="true">
                     <fieldset>
     
                     <div class="form-field">
