--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!--- basic page needs
     ================================================== -->
    <meta charset="utf-8">
-    <title>Dumebi Iwuchukwu, Art Manager, Brand Strategist &amp; Developer </title>
-    <meta name="description" content="Ogene Digital is a brand identity, website design, development &amp; online marketing company in Lagos, delivering sustained results for their clients.">
+    <title>Dum3bi- Personal website of Dumebi Iwuchukwu Micheal</title>
+    <meta name="description" content="Dumebi is an Art Manager, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
 
   <link rel="canonical" href="https://www.dum3bi.com/">
   <meta property="og:site_name" content="Dumebi Iwuchukwu">
@@ -20,20 +20,20 @@
   <meta name="twitter:site" content="@dum3bi">
   <meta name="twitter:creator" content="@dum3bi">
 
-  <meta property="og:url" content="https://www.ogenedigital.com/">
+  <meta property="og:url" content="https://www.dum3bi.com/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Strategy | Brand | Web | Digital Marketing Experts in Lagos Nigeria | Ogene Digital">
-  <meta property="og:description" content="Ogene Digital is a brand identity, website design, development &amp; online marketing company in Lagos, delivering sustained results for their clients.">
-  <meta property="og:image" content="https://www.ogenedigital.com/images/logo.png">
-  <meta property="og:image:alt" content="Ggene Digital">
+  <meta property="og:title" content="Dum3bi- Personal website of Dumebi Iwuchukwu Micheal.">
+  <meta property="og:description" content="Dumebi is an Art Manager, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
+  <meta property="og:image" content="https://www.dum3bi.com/images/logo.png">
+  <meta property="og:image:alt" content="Dumebi's logo">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Strategy | Brand | Web | Digital Marketing Experts in Lagos Nigeria | Ogene Digital">
-  <meta name="twitter:description" content="Ogene Digital is a brand identity, website design, development &amp; online marketing company in Lagos, delivering sustained results for their clients.">
-  <meta name="twitter:image" content="https://www.ogenedigital.com/images/logo.png">
+  <meta name="twitter:title" content="Dumebi Iwuchukwu">
+  <meta name="twitter:description" content="Dumebi is an Art Manager, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
+  <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.png">
 
   <meta property="og:type" content="website">
 
-  <meta name="keywords" content="Ogene Digital, Branding, Marketing, Strategy, Digital Marketing Strategy, Email marketing, Online Advertising, Creative Agency,Lagos,  Nigeria">
+  <meta name="keywords" content="Dumebi Iwuchukwu, Chukwudumebi Iwuchukwu, Chukwudumebi Iwuchukwu Micheal, Art Manager, Brand Strategist, Developer, Strategy, Digital Marketing Strategy, Email marketing, Online Advertising, Creative, Lagos, Ozubulu,  Nigeria">
     <meta name="author" content="Dumebi Iwuchukwu">
 
     <!-- mobile specific metas
@@ -130,7 +130,7 @@
                 <a href="https://www.behance.net/dum3bi" target="_blank"><i class="im im-behance" aria-hidden="true"></i><span>Behance</span></a>
             </li>
             <li>
-                <a href="http://linkedin.com/in/chukwudumebi" target="_blank"><i class="im im-linkedin" aria-hidden="true"></i><span>Linkedin</span></a>
+                <a href="https://linkedin.com/in/chukwudumebi" target="_blank"><i class="im im-linkedin" aria-hidden="true"></i><span>Linkedin</span></a>
             </li>
         </ul> 
         <!-- end home-social -->
