--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
   <meta name="keywords" content="Dumebi Iwuchukwu, Chukwudumebi Iwuchukwu, Chukwudumebi Iwuchukwu Micheal, Art Manager, Brand Strategist, Developer, Strategy, Digital Marketing Strategy, Email marketing, Online Advertising, Creative, Lagos, Ozubulu,  Nigeria">
     <meta name="author" content="Dumebi Iwuchukwu">
 
+    <!-- site security metas
+    ================================================== -->
+    <meta http-equiv="Content-Security-Policy" content="default-src https://dum3bi.com https://dumebiportfolio.netlify.com 'unsafe-inline' 'unsafe-eval'; child-src 'none'; object-src 'none'; script-src 'https://dum3bi.com' ">
+    
+    <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubdomains">
+     
+
     <!-- mobile specific metas
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
