--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <!-- site security metas
     ================================================== -->
-    <meta http-equiv="Content-Security-Policy" content="default-src https://dum3bi.com https://dumebiportfolio.netlify.com 'unsafe-inline' 'unsafe-eval'; child-src 'none'; object-src 'none'; script-src 'https://dum3bi.com' ">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'unsafe-inline' 'unsafe-eval'">
     
     <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubdomains">
      
