--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     <!-- site security metas
     ================================================== -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'unsafe-inline' 'unsafe-eval'">
-    
+   <meta http-equiv="Content-Security-Policy" content="base-uri 'self'">
+
     <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubdomains">
      
 
