--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!--<![endif]-->
 
 <head>
-
+<meta http-equiv="Content-Security-Policy" content="base-uri 'self'; default-src 'none'; img-src 'self'; script-src 'self'; style-src 'self'; block-all-mixed-content">
     <!--- basic page needs
     ================================================== -->
    <meta charset="utf-8">
@@ -38,7 +38,8 @@
 
     <!-- site security metas
     ================================================== -->
-   <meta http-equiv="Content-Security-Policy" content="base-uri 'self'">
+   
+  
 
     <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubdomains">
      
