--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!--<![endif]-->
 
 <head>
-<meta http-equiv="Content-Security-Policy" content="base-uri 'self'; default-src 'none'; img-src 'self'; script-src 'self'; style-src 'self'; block-all-mixed-content">
+<meta http-equiv="Content-Security-Policy" content="base-uri 'self'; default-src 'none'; img-src 'self'; script-src 'self' 'https://d33wubrfki0l68.cloudfront.net/bundles/f62efd88cb90de8622f4850f5aa892b23140d9eb.js' 'https://d33wubrfki0l68.cloudfront.net/bundles/065a3df5a9b5c72bd81bf9c8f6b3a78ed0a45b72.js'; style-src 'self''https://d33wubrfki0l68.cloudfront.net/bundles/e548dbf7a8570a8355bed696a436a0e8e67af00b.css'; block-all-mixed-content">
     <!--- basic page needs
     ================================================== -->
    <meta charset="utf-8">
