--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!--<![endif]-->
 
 <head>
-<meta http-equiv="Content-Security-Policy" content="base-uri 'self'; default-src: https: 'unsafe-inline'; block-all-mixed-content">
+<meta http-equiv="Content-Security-Policy" content="base-uri 'self';  block-all-mixed-content">
     <!--- basic page needs
     ================================================== -->
    <meta charset="utf-8">
