--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
     <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubdomains">
     <meta http-equiv="X-Frame-Options" content="deny">
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+     
      
 
     <!-- mobile specific metas
