--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     ================================================== -->
    <meta charset="utf-8">
     <title>Dum3bi- Personal website of Dumebi Iwuchukwu Micheal</title>
-    <meta name="description" content="Dumebi is an Art Manager, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
+    <meta name="description" content="Dumebi Iwuchukwu is an Art Manager, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
 
   <link rel="canonical" href="https://www.dum3bi.com/">
   <meta property="og:site_name" content="Dumebi Iwuchukwu">
@@ -32,7 +32,7 @@
 
   <meta property="og:type" content="website">
 
-  <meta name="keywords" content="Dumebi Iwuchukwu, Chukwudumebi Iwuchukwu, Chukwudumebi Iwuchukwu Micheal, Art Manager, Brand Strategist, Developer, Strategy, Digital Marketing Strategy, Email marketing, Online Advertising, Creative, Lagos, Ozubulu,  Nigeria">
+  <meta name="keywords" content="Dumebi Iwuchukwu,Dumebi Nnadirinwa Iwuchukwu, Chukwudumebi Iwuchukwu, Chukwudumebi Iwuchukwu Micheal, Art Manager, Brand Strategist, Developer, Strategy, Digital Marketing Strategy, Email marketing, Online Advertising, Creative, Lagos, Ozubulu,  Nigeria">
     <meta name="author" content="Dumebi Iwuchukwu">  
      
          <!-- mobile specific metas
@@ -63,7 +63,7 @@
     <header class="s-header">
 
         <div class="header-logo">
-            <a class="site-logo" href="index.html"><img src="images/logo.png" alt="Homepage"></a>
+            <a class="site-logo" href="index.html"><img data-src="images/logo.png" alt="Homepage" class="lazyload"></a>
         </div>
 
         <nav class="header-nav-wrap">
@@ -221,8 +221,8 @@
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-beetle.jpg" class="thumb-link" title="The Beetle Car" data-size="1050x700">
-                                <img src="images/portfolio/beetle.jpg" 
-                                     srcset="images/portfolio/beetle.jpg 1x, images/portfolio/beetle@2x.jpg 2x" alt="">
+                                <img data-src="images/portfolio/beetle.jpg" 
+                                     srcset="images/portfolio/beetle.jpg 1x, images/portfolio/beetle@2x.jpg 2x" alt="" class="lazyload">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -252,8 +252,8 @@
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-lighthouse.jpg" class="thumb-link" title="Lighthouse" data-size="1050x700">
-                                <img src="images/portfolio/lighthouse.jpg" 
-                                     srcset="images/portfolio/lighthouse.jpg 1x, images/portfolio/lighthouse@2x.jpg 2x" alt="">
+                                <img data-src="images/portfolio/lighthouse.jpg" 
+                                     srcset="images/portfolio/lighthouse.jpg 1x, images/portfolio/lighthouse@2x.jpg 2x" alt="" class="lazyload">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -283,8 +283,8 @@
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-salad.jpg" class="thumb-link" data-size="1050x700">
-                                <img src="images/portfolio/salad.jpg" 
-                                     srcset="images/portfolio/salad.jpg 1x, images/portfolio/salad@2x.jpg 2x" alt="">
+                                <img data-src="images/portfolio/salad.jpg" 
+                                     srcset="images/portfolio/salad.jpg 1x, images/portfolio/salad@2x.jpg 2x" alt="" class="lazyload">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -314,8 +314,8 @@
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-woodcraft.jpg" class="thumb-link" data-size="1050x700">
-                                <img src="images/portfolio/woodcraft.jpg"
-                                     srcset="images/portfolio/woodcraft.jpg 1x, images/portfolio/woodcraft@2x.jpg 2x" alt="">
+                                <img data-src="images/portfolio/woodcraft.jpg"
+                                     srcset="images/portfolio/woodcraft.jpg 1x, images/portfolio/woodcraft@2x.jpg 2x" alt=""class="lazyload">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -345,8 +345,8 @@
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-skaterboy.jpg" class="thumb-link" data-size="1050x700">
-                                <img src="images/portfolio/skaterboy.jpg"
-                                     srcset="images/portfolio/skaterboy.jpg 1x, images/portfolio/skaterboy@2x.jpg 2x" alt="">
+                                <img data-src="images/portfolio/skaterboy.jpg"
+                                     srcset="images/portfolio/skaterboy.jpg 1x, images/portfolio/skaterboy@2x.jpg 2x" alt=""class="lazyload">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -376,8 +376,8 @@
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-liberty.jpg" class="thumb-link" data-size="1050x700">
-                                <img src="images/portfolio/liberty.jpg"
-                                     srcset="images/portfolio/liberty.jpg 1x, images/portfolio/liberty@2x.jpg 2x" alt="">
+                                <img data-src="images/portfolio/liberty.jpg"
+                                     srcset="images/portfolio/liberty.jpg 1x, images/portfolio/liberty@2x.jpg 2x" alt="" class="lazyload">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -407,8 +407,8 @@
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-minimalismo.jpg" class="thumb-link" data-size="1050x700">
-                                <img src="images/portfolio/minimalismo.jpg"
-                                     srcset="images/portfolio/minimalismo.jpg 1x, images/portfolio/minimalismo@2x.jpg 2x" alt="">
+                                <img data-src="images/portfolio/minimalismo.jpg"
+                                     srcset="images/portfolio/minimalismo.jpg 1x, images/portfolio/minimalismo@2x.jpg 2x" alt="" class="lazyload">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -438,8 +438,8 @@
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-shutterbug.jpg" class="thumb-link" data-size="1050x700">
-                                <img src="images/portfolio/shutterbug.jpg"
-                                     srcset="images/portfolio/shutterbug.jpg 1x, images/portfolio/shutterbug@2x.jpg 2x" alt="">
+                                <img data-src="images/portfolio/shutterbug.jpg"
+                                     srcset="images/portfolio/shutterbug.jpg 1x, images/portfolio/shutterbug@2x.jpg 2x" alt="" class="lazyload">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -486,7 +486,7 @@
             <div class="col-full testimonials__slider">
 
                 <div class="testimonials__slide">
-                    <img src="images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar">
+                    <img data-src="images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar">
                     <p>Qui ipsam temporibus quisquam velMaiores eos cumque distinctio nam accusantium ipsum. 
                     Laudantium quia consequatur molestias delectus culpa facere hic dolores aperiam. Accusantium quos qui praesentium corpori.</p>
                     <div class="testimonials__author h06">
@@ -496,7 +496,7 @@
                 </div>
 
                 <div class="testimonials__slide">
-                    <img src="images/avatars/user-05.jpg" alt="Author image" class="testimonials__avatar">
+                    <img data-src="images/avatars/user-05.jpg" alt="Author image" class="testimonials__avatar">
                     <p>Excepturi nam cupiditate culpa doloremque deleniti repellat. Veniam quos repellat voluptas animi adipisci.
                     Nisi eaque consequatur. Quasi voluptas eius distinctio. Atque eos maxime. Qui ipsam temporibus quisquam vel.</p>
                     <div class="testimonials__author h06">
@@ -506,7 +506,7 @@
                 </div>
 
                 <div class="testimonials__slide">
-                    <img src="images/avatars/user-02.jpg" alt="Author image" class="testimonials__avatar">
+                    <img data-src="images/avatars/user-02.jpg" alt="Author image" class="testimonials__avatar lazyload">
                     <p>Repellat dignissimos libero. Qui sed at corrupti expedita voluptas odit. Nihil ea quia nesciunt. Ducimus aut sed ipsam.  
                     Autem eaque officia cum exercitationem sunt voluptatum accusamus. Quasi voluptas eius distinctio.</p>
                     <div class="testimonials__author h06">
@@ -701,7 +701,7 @@
             <div class="col-full">
 
                 <div class="footer-logo">
-                    <a class="footer-site-logo" href="#top"><img src="images/logo.png" alt="Homepage"></a>
+                    <a class="footer-site-logo" href="#top"><img data-src="images/logo.png" alt="Homepage" class="lazyload"></a>
                 </div>
 
                 <ul class="footer-social">
@@ -796,6 +796,7 @@
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/lazysizes.min.js" async></script>
 
 </body>
 
