--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
             <div class="col-full testimonials__slider">
 
                 <div class="testimonials__slide">
-                    <img data-src="images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar">
+                    <img data-src="images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar lazyload">
                     <p>Qui ipsam temporibus quisquam velMaiores eos cumque distinctio nam accusantium ipsum. 
                     Laudantium quia consequatur molestias delectus culpa facere hic dolores aperiam. Accusantium quos qui praesentium corpori.</p>
                     <div class="testimonials__author h06">
@@ -496,7 +496,7 @@
                 </div>
 
                 <div class="testimonials__slide">
-                    <img data-src="images/avatars/user-05.jpg" alt="Author image" class="testimonials__avatar">
+                    <img data-src="images/avatars/user-05.jpg" alt="Author image" class="testimonials__avatar lazyload">
                     <p>Excepturi nam cupiditate culpa doloremque deleniti repellat. Veniam quos repellat voluptas animi adipisci.
                     Nisi eaque consequatur. Quasi voluptas eius distinctio. Atque eos maxime. Qui ipsam temporibus quisquam vel.</p>
                     <div class="testimonials__author h06">
@@ -796,7 +796,7 @@
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/lazysizes.min.js" async></script>
+    <script src="lazysizes.min.js" async></script>
 
 </body>
 
