--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <header class="s-header">
 
         <div class="header-logo">
-            <a class="site-logo" href="index.html"><img data-src="images/logo.png" alt="Homepage" class="lazyload"></a>
+            <a class="site-logo" href="index.html"><img src="images/logo.png" alt="Homepage"></a>
         </div>
 
         <nav class="header-nav-wrap">
@@ -486,7 +486,7 @@
             <div class="col-full testimonials__slider">
 
                 <div class="testimonials__slide">
-                    <img data-src="images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar lazyload">
+                    <img src="images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar">
                     <p>Qui ipsam temporibus quisquam velMaiores eos cumque distinctio nam accusantium ipsum. 
                     Laudantium quia consequatur molestias delectus culpa facere hic dolores aperiam. Accusantium quos qui praesentium corpori.</p>
                     <div class="testimonials__author h06">
@@ -496,7 +496,7 @@
                 </div>
 
                 <div class="testimonials__slide">
-                    <img data-src="images/avatars/user-05.jpg" alt="Author image" class="testimonials__avatar lazyload">
+                    <img src="images/avatars/user-05.jpg" alt="Author image" class="testimonials__avatar">
                     <p>Excepturi nam cupiditate culpa doloremque deleniti repellat. Veniam quos repellat voluptas animi adipisci.
                     Nisi eaque consequatur. Quasi voluptas eius distinctio. Atque eos maxime. Qui ipsam temporibus quisquam vel.</p>
                     <div class="testimonials__author h06">
@@ -506,7 +506,7 @@
                 </div>
 
                 <div class="testimonials__slide">
-                    <img data-src="images/avatars/user-02.jpg" alt="Author image" class="testimonials__avatar lazyload">
+                    <img src="images/avatars/user-02.jpg" alt="Author image" class="testimonials__avatar">
                     <p>Repellat dignissimos libero. Qui sed at corrupti expedita voluptas odit. Nihil ea quia nesciunt. Ducimus aut sed ipsam.  
                     Autem eaque officia cum exercitationem sunt voluptatum accusamus. Quasi voluptas eius distinctio.</p>
                     <div class="testimonials__author h06">
@@ -701,7 +701,7 @@
             <div class="col-full">
 
                 <div class="footer-logo">
-                    <a class="footer-site-logo" href="#top"><img data-src="images/logo.png" alt="Homepage" class="lazyload"></a>
+                    <a class="footer-site-logo" href="#top"><img src="images/logo.png" alt="Homepage"></a>
                 </div>
 
                 <ul class="footer-social">
