--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
    <meta charset="utf-8">
     <title>Dum3bi- Personal website of Dumebi Iwuchukwu Micheal</title>
     <meta name="description" content="Dumebi Iwuchukwu is an Art Manager, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
+    <meta name="theme-color" content="#449cff"/>
 
   <link rel="canonical" href="https://www.dum3bi.com/">
   <meta property="og:site_name" content="Dumebi Iwuchukwu">
@@ -117,19 +118,19 @@
 
         <ul class="home-social">
             <li>
-                <a href="https://www.facebook.com/iwuchukwu.dumebi" target="_blank"><i class="im im-facebook" aria-hidden="true"></i><span>Facebook</span></a>
+                <a href="https://www.facebook.com/iwuchukwu.dumebi" target="_blank" rel="noopener"><i class="im im-facebook" aria-hidden="true"></i><span>Facebook</span></a>
             </li>
             <li>
-                <a href="https://twitter.com/dum3bi" target="_blank"><i class="im im-twitter" aria-hidden="true"></i><span>Twitter</span></a>
+                <a href="https://twitter.com/dum3bi" target="_blank" rel="noopener"><i class="im im-twitter" aria-hidden="true"></i><span>Twitter</span></a>
             </li>
             <li>
-                <a href="https://instagram.com/dum3bi" target="_blank"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
+                <a href="https://instagram.com/dum3bi" target="_blank" rel="noopener"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
             </li>
             <li>
-                <a href="https://www.behance.net/dum3bi" target="_blank"><i class="im im-behance" aria-hidden="true"></i><span>Behance</span></a>
+                <a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener"><i class="im im-behance" aria-hidden="true"></i><span>Behance</span></a>
             </li>
             <li>
-                <a href="https://linkedin.com/in/chukwudumebi" target="_blank"><i class="im im-linkedin" aria-hidden="true"></i><span>Linkedin</span></a>
+                <a href="https://linkedin.com/in/chukwudumebi" target="_blank" rel="noopener"><i class="im im-linkedin" aria-hidden="true"></i><span>Linkedin</span></a>
             </li>
         </ul> 
         <!-- end home-social -->
@@ -251,37 +252,6 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-lighthouse.jpg" class="thumb-link" title="Lighthouse" data-size="1050x700">
-                                <img data-src="images/portfolio/lighthouse.jpg" 
-                                     srcset="images/portfolio/lighthouse.jpg 1x, images/portfolio/lighthouse@2x.jpg 2x" alt="" class="lazyload">
-                                <span class="shadow-overlay"></span>
-                            </a>
-                        </div>
-
-                        <div class="item-folio__text">
-                            <h3 class="item-folio__title">
-                                Lighthouse
-                            </h3>
-                            <p class="item-folio__cat">
-                                Web Design
-                            </p>
-                        </div>
-
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
-                            <i class="im im-link"></i>
-                        </a>
-
-                        <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
-                        </div>
-
-                    </div> <!-- end item-folio -->
-                </div> <!-- end masonry__brick -->
-
-                <div class="masonry__brick">
-                    <div class="item-folio">
-
-                        <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-salad.jpg" class="thumb-link" data-size="1050x700">
                                 <img data-src="images/portfolio/salad.jpg" 
                                      srcset="images/portfolio/salad.jpg 1x, images/portfolio/salad@2x.jpg 2x" alt="" class="lazyload">
@@ -309,99 +279,7 @@
                     </div> <!-- end item-folio -->
                 </div> <!-- end masonry__brick -->
 
-                <div class="masonry__brick">
-                    <div class="item-folio">
-
-                        <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-woodcraft.jpg" class="thumb-link" data-size="1050x700">
-                                <img data-src="images/portfolio/woodcraft.jpg"
-                                     srcset="images/portfolio/woodcraft.jpg 1x, images/portfolio/woodcraft@2x.jpg 2x" alt=""class="lazyload">
-                                <span class="shadow-overlay"></span>
-                            </a>
-                        </div>
-
-                        <div class="item-folio__text">
-                            <h3 class="item-folio__title">
-                                Woodcraft
-                            </h3>
-                            <p class="item-folio__cat">
-                                Branding
-                            </p>
-                        </div>
-
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
-                            <i class="im im-link"></i>
-                        </a>
-
-                        <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
-                        </span>
-
-                    </div> <!-- end item-folio -->
-                </div> <!-- end masonry__brick -->
-
-                <div class="masonry__brick">
-                    <div class="item-folio">
-
-                        <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-skaterboy.jpg" class="thumb-link" data-size="1050x700">
-                                <img data-src="images/portfolio/skaterboy.jpg"
-                                     srcset="images/portfolio/skaterboy.jpg 1x, images/portfolio/skaterboy@2x.jpg 2x" alt=""class="lazyload">
-                                <span class="shadow-overlay"></span>
-                            </a>
-                        </div>
-
-                        <div class="item-folio__text">
-                            <h3 class="item-folio__title">
-                                Skaterboy
-                            </h3>
-                            <p class="item-folio__cat">
-                                Web Development
-                            </p>
-                        </div>
-
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
-                            <i class="im im-link"></i>
-                        </a>
-
-                        <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
-                        </span>
-
-                    </div> <!-- end item-folio -->
-                </div> <!-- end masonry__brick -->
-
-                <div class="masonry__brick">
-                    <div class="item-folio">
-
-                        <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-liberty.jpg" class="thumb-link" data-size="1050x700">
-                                <img data-src="images/portfolio/liberty.jpg"
-                                     srcset="images/portfolio/liberty.jpg 1x, images/portfolio/liberty@2x.jpg 2x" alt="" class="lazyload">
-                                <span class="shadow-overlay"></span>
-                            </a>
-                        </div>
-
-                        <div class="item-folio__text">
-                            <h3 class="item-folio__title">
-                                Liberty
-                            </h3>
-                            <p class="item-folio__cat">
-                                Branding
-                            </p>
-                        </div>
-
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
-                            <i class="im im-link"></i>
-                        </a>
-
-                        <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
-                        </span>
-
-                    </div> <!-- end item-folio -->
-                </div> <!-- end masonry__brick -->
-
+               
                 <div class="masonry__brick">
                     <div class="item-folio">
 
@@ -433,37 +311,7 @@
                     </div> <!-- end item-folio -->
                 </div> <!-- end masonry__brick -->
 
-                <div class="masonry__brick">
-                    <div class="item-folio">
-
-                        <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-shutterbug.jpg" class="thumb-link" data-size="1050x700">
-                                <img data-src="images/portfolio/shutterbug.jpg"
-                                     srcset="images/portfolio/shutterbug.jpg 1x, images/portfolio/shutterbug@2x.jpg 2x" alt="" class="lazyload">
-                                <span class="shadow-overlay"></span>
-                            </a>
-                        </div>
-
-                        <div class="item-folio__text">
-                            <h3 class="item-folio__title">
-                                Lady Shutterbug
-                            </h3>
-                            <p class="item-folio__cat">
-                                Branding
-                            </p>
-                        </div>
-
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
-                            <i class="im im-link"></i>
-                        </a>
-
-                        <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
-                        </span>
-
-                    </div> <!-- end item-folio -->
-                </div> <!-- end masonry__brick -->
-
+                
             </div>
         </div> <!-- end masonry -->
 
@@ -705,23 +553,23 @@
                 </div>
 
                 <ul class="footer-social">
-                    <li><a href="https://www.facebook.com/iwuchukwu.dumebi" target="_blank">
+                    <li><a href="https://www.facebook.com/iwuchukwu.dumebi" target="_blank" rel="noopener">
                         <i class="im im-facebook" aria-hidden="true"></i>
                         <span>Facebook</span>
                     </a></li>
-                    <li><a href="https://twitter.com/dum3bi" target="_blank">
+                    <li><a href="https://twitter.com/dum3bi" target="_blank" rel="noopener">
                         <i class="im im-twitter" aria-hidden="true"></i>
                         <span>Twitter</span>
                     </a></li>
-                    <li><a href="https://instagram.com/dum3bi" target="_blank">
+                    <li><a href="https://instagram.com/dum3bi" target="_blank" rel="noopener">
                         <i class="im im-instagram" aria-hidden="true"></i>
                         <span>Instagram</span>
                     </a></li>
-                    <li><a href="https://www.behance.net/dum3bi" target="_blank">
+                    <li><a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener">
                         <i class="im im-behance" aria-hidden="true"></i>
                         <span>Behance</span>
                     </a></li>
-                    <li><a href="https://linkedin.com/in/chukwudumebi" target="_blank">
+                    <li><a href="https://linkedin.com/in/chukwudumebi" target="_blank" rel="noopener">
                         <i class="im im-linkedin" aria-hidden="true"></i>
                         <span>Linkedin</span>
                     </a></li>
