--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     ================================================== -->
    <meta charset="utf-8">
     <title>Dum3bi- Personal website of Dumebi Iwuchukwu Micheal</title>
-    <meta name="description" content="Dumebi Iwuchukwu is an Art Manager, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
+    <meta name="description" content="Dumebi Iwuchukwu is an Art Manager, Brand Strategist and Developer based in Lagos, Nigeria. He is the Art Manager and Resident Instructor (Art direction) at Oxygen Academy Lagos, The foremost school of brand communications in Nigeria.">
     <meta name="theme-color" content="#449cff"/>
 
   <link rel="canonical" href="https://www.dum3bi.com/">
