--- a/thank-you.html
+++ b/thank-you.html
@@ -10,9 +10,9 @@
     <!--- basic page needs
    ================================================== -->
     <meta charset="utf-8">
-    <title>Style Guide - Dumebi's website, portfolio and blog</title>
+    <title>Thank you - Dumebi's website, portfolio and blog</title>
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Dumebi Iwuchukwu">
 
     <!-- mobile specific metas
    ================================================== -->
@@ -24,13 +24,7 @@
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
 
-    <style type="text/css" media="screen">
-        .s-styles { 
-             background: white;
-              padding-top: 15rem;
-              padding-bottom: 12rem;
-        }
-     </style> 
+    
 
     <!-- script
    ================================================== -->
@@ -83,9 +77,6 @@
                <h1 >Thanks You for reaching out!<br>
                      I'll get back to you shortly.</h3>
 
-                     <h1 >
-                      Have you read my blog? <a href="blog.html">Check it out</a>
-                     </h1>
                       <h1 >
                       <a class="btn full-width " href="index.html">Continue to homepage</a>
                       <h1>
@@ -100,19 +91,19 @@
 
         <ul class="home-social">
             <li>
-                <a href="#"><i class="im im-facebook" aria-hidden="true"></i><span>Facebook</span></a>
+                <a href="https://www.facebook.com/iwuchukwu.dumebi" target="_blank" rel="noopener"><i class="im im-facebook" aria-hidden="true"></i><span>Facebook</span></a>
             </li>
             <li>
-                <a href="#"><i class="im im-twitter" aria-hidden="true"></i><span>Twiiter</span></a>
+                <a href="https://twitter.com/dum3bi" target="_blank" rel="noopener"><i class="im im-twitter" aria-hidden="true"></i><span>Twitter</span></a>
             </li>
             <li>
-                <a href="#"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
+                <a href="https://instagram.com/dum3bi" target="_blank" rel="noopener"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
             </li>
             <li>
-                <a href="#"><i class="im im-behance" aria-hidden="true"></i><span>Behance</span></a>
+                <a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener"><i class="im im-behance" aria-hidden="true"></i><span>Behance</span></a>
             </li>
             <li>
-                <a href="#"><i class="im im-pinterest" aria-hidden="true"></i><span>Pinterest</span></a>
+                <a href="https://linkedin.com/in/chukwudumebi" target="_blank" rel="noopener"><i class="im im-pinterest" aria-hidden="true"></i><span>Pinterest</span></a>
             </li>
         </ul> 
         <!-- end home-social -->
@@ -133,23 +124,23 @@
                     </div>
     
                     <ul class="footer-social">
-                    <li><a href="https://www.facebook.com/iwuchukwu.dumebi" target="_blank">
+                    <li><a href="https://www.facebook.com/iwuchukwu.dumebi" target="_blank" rel="noopener">
                         <i class="im im-facebook" aria-hidden="true"></i>
                         <span>Facebook</span>
                     </a></li>
-                    <li><a href="https://twitter.com/dum3bi" target="_blank">
+                    <li><a href="https://twitter.com/dum3bi" target="_blank" rel="noopener">
                         <i class="im im-twitter" aria-hidden="true"></i>
                         <span>Twitter</span>
                     </a></li>
-                    <li><a href="https://instagram.com/dum3bi" target="_blank">
+                    <li><a href="https://instagram.com/dum3bi" target="_blank" rel="noopener">
                         <i class="im im-instagram" aria-hidden="true"></i>
                         <span>Instagram</span>
                     </a></li>
-                    <li><a href="https://www.behance.net/dum3bi" target="_blank">
+                    <li><a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener">
                         <i class="im im-behance" aria-hidden="true"></i>
                         <span>Behance</span>
                     </a></li>
-                    <li><a href="https://linkedin.com/in/chukwudumebi" target="_blank">
+                    <li><a href="https://linkedin.com/in/chukwudumebi" target="_blank" rel="noopener">
                         <i class="im im-linkedin" aria-hidden="true"></i>
                         <span>Linkedin</span>
                     </a></li>
