--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--- basic page needs
     ================================================== -->
    <meta charset="utf-8">
-    <title>Personal website of Dumebi Iwuchukwu</title>
+    <title>Home - Personal website of Dumebi Iwuchukwu</title>
     <meta name="description" content="Dumebi Iwuchukwu is an Art Manager, Brand Strategist and Developer based in Lagos, Nigeria. He is the Art Manager and Resident Instructor (Art direction) at Oxygen Academy Lagos, The foremost school of brand communications in Nigeria.">
     <meta name="theme-color" content="#449cff"/>
 
