--- a/blog.html
+++ b/blog.html
@@ -9,10 +9,33 @@
 
     <!--- basic page needs
     ================================================== -->
-    <meta charset="utf-8">
-    <title>Blog - Hola</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+     <meta charset="utf-8">
+    <title>Dumebi Iwuchukwu - Blog</title>
+    <meta name="description" content="Dumebi Iwuchukwu is an Art Manager, Brand Strategist and Developer based in Lagos, Nigeria. He is the Art Manager and Resident Instructor (Art direction) at Oxygen Academy Lagos, The foremost school of brand communications in Nigeria.">
+    <meta name="theme-color" content="#449cff"/>
+
+  <link rel="canonical" href="https://www.dum3bi.com/">
+  <meta property="og:site_name" content="Dumebi Iwuchukwu">
+  <meta property="og:locale" content="en_GB">
+  <meta property="article:publisher" content="https://www.facebook.com/iwuchukwu.dumebi">
+  <meta name="twitter:site" content="@dum3bi">
+  <meta name="twitter:creator" content="@dum3bi">
+
+  <meta property="og:url" content="https://www.dum3bi.com/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Dum3bi- Personal website of Dumebi Iwuchukwu Micheal.">
+  <meta property="og:description" content="Dumebi is an Art Manager, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
+  <meta property="og:image" content="https://www.dum3bi.com/images/logo.png">
+  <meta property="og:image:alt" content="Dumebi's logo">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Dumebi Iwuchukwu">
+  <meta name="twitter:description" content="Dumebi is an Art Manager, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
+  <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.png">
+
+  <meta property="og:type" content="website">
+
+  <meta name="keywords" content="Dumebi Iwuchukwu,Dumebi Nnadirinwa Iwuchukwu, Chukwudumebi Iwuchukwu, Chukwudumebi Iwuchukwu Micheal, Art Manager, Brand Strategist, Developer, Strategy, Digital Marketing Strategy, Email marketing, Online Advertising, Creative, Lagos, Ozubulu,  Nigeria">
+    <meta name="author" content="Dumebi Iwuchukwu">  
 
     <!-- mobile specific metas
     ================================================== -->
@@ -79,13 +102,13 @@
                 </div>
                 
                 <h1 class="page-header__title">
-                    <a href="#0" title="">
+                    <a href="golden_rules_of_design.html" title="The 10 Golden Rules of Clean Simple Design" target="_blank">
                         The 10 Golden Rules of Clean Simple Design.
                     </a>
                 </h1>
                 <p>Pellentesque in ipsum id orci porta dapibus amet dui. Ad id deserunt ratione autem eius et minima ut et. Nihil sed quis velit aut enim aliquam. Quas non ad sint eveniet voluptatem est iure...</p>
                 <p>
-                    <a href="#0" class="btn btn--stroke page-header__btn">Read More</a>
+                    <a href="golden_rules_of_design.html" class="btn btn--stroke page-header__btn" target="_blank">Read More</a>
                 </p>
             </article>
         </div>
@@ -226,25 +249,25 @@
                 </div>
 
                 <ul class="footer-social">
-                    <li><a href="#0">
+                    <li><a href="https://www.facebook.com/iwuchukwu.dumebi" target="_blank" rel="noopener">
                         <i class="im im-facebook" aria-hidden="true"></i>
                         <span>Facebook</span>
                     </a></li>
-                    <li><a href="#0">
+                    <li><a href="https://twitter.com/dum3bi" target="_blank" rel="noopener">
                         <i class="im im-twitter" aria-hidden="true"></i>
                         <span>Twitter</span>
                     </a></li>
-                    <li><a href="#0">
+                    <li><a href="https://instagram.com/dum3bi" target="_blank" rel="noopener">
                         <i class="im im-instagram" aria-hidden="true"></i>
                         <span>Instagram</span>
                     </a></li>
-                    <li><a href="#0">
+                    <li><a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener">
                         <i class="im im-behance" aria-hidden="true"></i>
                         <span>Behance</span>
                     </a></li>
-                    <li><a href="#0">
-                        <i class="im im-pinterest" aria-hidden="true"></i>
-                        <span>Pinterest</span>
+                    <li><a href="https://linkedin.com/in/chukwudumebi" target="_blank" rel="noopener">
+                        <i class="im im-linkedin" aria-hidden="true"></i>
+                        <span>Linkedin</span>
                     </a></li>
                 </ul>
                     
@@ -255,8 +278,8 @@
 
             <div class="col-twelve">
                 <div class="copyright">
-                    <span>© Copyright Hola 2017</span> 
-                    <span>Design by <a href="https://www.styleshout.com/">styleshout</a></span>	
+                    <span>© Copyright Dumebi Iwuchukwu 2019</span>  
+                    <span>Design by me</span>	
                 </div>
 
                 <div class="go-top">
