--- a/index.html
+++ b/index.html
@@ -395,13 +395,13 @@
                             <a href="blog-single.html" target="_blank">Sept 16, 2017</a>
                         </div>  
                         
-                        <h2 class="h01"><a href="blog-single.html" target="_blank">The 10 Golden Rules of Clean Simple Design.</a></h2>
+                        <h2 class="h01"><a href="golden_rules_of_design.html" target="_blank">The 10 Golden Rules of Clean Simple Design.</a></h2>
                         <p>
                         Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Pellentesque in ipsum id orci porta dapibus. Donec sollicitudin molestie malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Cras ultricies ligula sed magna dictum porta. Sed porttitor lectus nibh..
                         </p>
 
                         <div class="blog-cat">
-                                <a href="blog.html" target="_blank">Branding</a><a href="blog.html" target="_blank">Design</a>
+                                <a href="blog.html" target="_blank">Minimalism</a><a href="blog.html" target="_blank">Design</a>
                         </div>
 
                         
