--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     ================================================== -->
    <meta charset="utf-8">
     <title>Dumebi Iwuchukwu - Art Manager, Brand Strategist and Developer - Personal website</title>
-    <meta name="description" content="Dumebi Iwuchukwu is an Art Manager, Brand Strategist and Developer based in Lagos, Nigeria. He is the Art Manager and Resident Instructor (Art direction) at Oxygen Academy Lagos, The foremost school of brand communications in Nigeria.">
+    <meta name="description" content="HOME PAGE - Dumebi. Dumebi Iwuchukwu Micheal (Dum3bi) - This is my personal website where I share Ideas, Inspiration and My Journey.">
     <meta name="theme-color" content="#449cff"/>
 
   <link rel="canonical" href="https://www.dum3bi.com/">
@@ -539,7 +539,7 @@
 
             <div class="col-twelve">
                 <div class="copyright">
-                    <span>© Copyright Dumebi Iwuchukwu 2019</span>	
+                    <span>© Copyright Dumebi Iwuchukwu 2019</span>  
                 </div>
 
                 <div class="go-top">
