--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!--- basic page needs
     ================================================== -->
    <meta charset="utf-8">
-    <title>Dumebi Iwuchukwu - Art Manager, Brand Strategist and Developer - Personal website</title>
-    <meta name="description" content="HOME PAGE - Dumebi. Dumebi Iwuchukwu Micheal (Dum3bi) - This is my personal website where I share Ideas, Inspiration and My Journey.">
+    <title>Dumebi Iwuchukwu | Art Manager, Brand Strategist and Developer - Personal website</title>
+    <meta name="description" content="Dumebi Iwuchukwu is an Art Manager, Brand Strategist and Developer based in Lagos, Nigeria. He is the Art Manager and Resident Instructor (Art direction) at Oxygen Academy Lagos, The foremost school of brand communications in Nigeria.">
     <meta name="theme-color" content="#449cff"/>
 
   <link rel="canonical" href="https://www.dum3bi.com/">
@@ -159,7 +159,7 @@
 
                  <p>I feel the best solutions are designed in collaboration with the tribes that needs it, this makes the solutions Relevant, Original and Impactful, ensuring a High ROI to the brands involved.</p>
 
-                <p>I am an Art Manager and Resident Instructor <br> (Art Direction)
+                <p>I am an Art Manager and Resident Instructor (Art Direction)
                      at Oxygen Academy, Lagos Nigeria</p>
 
                 <p>I am also a trained Medical Radiographer and Sonographer with a bachelor's degree in Radiography and Radiological Sciences from Nnamdi Azikiwe University.</p>
@@ -172,7 +172,7 @@
 
                 <ul class="skill-bars">
                     <li>
-                    <div class="progress percent90"><span>95%</span></div>
+                    <div class="progress percent90"><span>90%</span></div>
                     <strong>Digital Design</strong>
                     </li>
                     <li>
@@ -184,15 +184,15 @@
                     <strong>Business Strategy</strong>
                     </li>
                     <li>
-                    <div class="progress percent95"><span>75%</span></div>
+                    <div class="progress percent75"><span>75%</span></div>
                     <strong>Digital Marketing</strong>
                     </li>
                     <li>
-                    <div class="progress percent75"><span>65%</span></div>
+                    <div class="progress percent85"><span>85%</span></div>
                     <strong>Design Thinking</strong>
                     </li>   
                     <li>
-                    <div class="progress percent90"><span>70%</span></div>
+                    <div class="progress percent70"><span>70%</span></div>
                     <strong>Writing</strong>
                     </li>   
                 </ul>
@@ -231,10 +231,10 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                The Beetle
+                                D3ntiti
                             </h3>
                             <p class="item-folio__cat">
-                                Web Development
+                                Identity, Strategy
                             </p>
                         </div>
 
@@ -317,61 +317,6 @@
         </div> <!-- end masonry -->
 
     </section> <!-- end works -->
-
- <!-- testimonials
-    ================================================== -->
-    <div class="s-testimonials">
-
-        <div class="overlay"></div>
-
-        <div class="row testimonials-header">
-            <div class="col-full">
-                <h1 class="h02">Recommendations.</h1>
-            </div>
-        </div>
-
-        <div class="row testimonials">
-
-            <div class="col-full testimonials__slider">
-
-                <div class="testimonials__slide">
-                    <img src="images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar">
-                    <p>Qui ipsam temporibus quisquam velMaiores eos cumque distinctio nam accusantium ipsum. 
-                    Laudantium quia consequatur molestias delectus culpa facere hic dolores aperiam. Accusantium quos qui praesentium corpori.</p>
-                    <div class="testimonials__author h06">
-                        Tim Cook
-                        <span>CEO, Apple</span>
-                    </div>
-                </div>
-
-                <div class="testimonials__slide">
-                    <img src="images/avatars/user-05.jpg" alt="Author image" class="testimonials__avatar">
-                    <p>Excepturi nam cupiditate culpa doloremque deleniti repellat. Veniam quos repellat voluptas animi adipisci.
-                    Nisi eaque consequatur. Quasi voluptas eius distinctio. Atque eos maxime. Qui ipsam temporibus quisquam vel.</p>
-                    <div class="testimonials__author h06">
-                        Sundar Pichai
-                        <span>CEO, Google</span>
-                    </div>
-                </div>
-
-                <div class="testimonials__slide">
-                    <img src="images/avatars/user-02.jpg" alt="Author image" class="testimonials__avatar">
-                    <p>Repellat dignissimos libero. Qui sed at corrupti expedita voluptas odit. Nihil ea quia nesciunt. Ducimus aut sed ipsam.  
-                    Autem eaque officia cum exercitationem sunt voluptatum accusamus. Quasi voluptas eius distinctio.</p>
-                    <div class="testimonials__author h06">
-                        Satya Nadella
-                        <span>CEO, Microsoft</span>
-                    </div>
-                </div>
-                
-            </div> <!-- end testimonials__slider -->
-
-        </div> <!-- end testimonials -->
-
-    </div> <!-- end s-testimonials -->
-
-
-
     <!-- blog
     ================================================== -->
     <section id="blog" class="s-blog target-section">
@@ -539,7 +484,7 @@
 
             <div class="col-twelve">
                 <div class="copyright">
-                    <span>© Copyright Dumebi Iwuchukwu 2019</span>  
+                    <span>© Copyright Dumebi Iwuchukwu 2019</span>	
                 </div>
 
                 <div class="go-top">
