Revert "Change beetle car to d3ntiti brand"
This reverts commit eca217f13dd5bbfec50992973a63e2e2a9df8ea4.

--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-d3ntiti.jpg" class="thumb-link" title="The d3ntiti Brand" data-size="1050x700">
-                                <img data-src="images/portfolio/d3ntiti.jpg"
-                                     srcset="images/portfolio/d3ntiti.jpg 1x, images/portfolio/d3ntiti@2x.jpg 2x" alt="" class="lazyload">
+                            <a href="images/portfolio/gallery/g-beetle.jpg" class="thumb-link" title="The Beetle Car" data-size="1050x700">
+                                <img data-src="images/portfolio/beetle.jpg"
+                                     srcset="images/portfolio/beetle.jpg 1x, images/portfolio/beetle@2x.jpg 2x" alt="" class="lazyload">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
