--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
 
   <meta property="og:type" content="website">
 
-  <meta name="keywords" content="Dumebi Iwuchukwu,Dumebi Nnadirinwa Iwuchukwu, Chukwudumebi Iwuchukwu, Chukwudumebi Iwuchukwu Micheal, Art Manager, Brand Strategist, Developer, Strategy, Digital Marketing Strategy, Email marketing, Online Advertising, Creative, Lagos, Ozubulu,  Nigeria">
+  <meta name="keywords" content="blog, thoughts, insights, Dumebi Iwuchukwu, Dumebi Nnadirinwa Iwuchukwu, Chukwudumebi Iwuchukwu, Chukwudumebi Iwuchukwu Micheal, Art Manager, Brand Strategist, Developer, Strategy, Digital Marketing Strategy, Email marketing, Online Advertising, Creative, Lagos, Ozubulu,  Nigeria">
     <meta name="author" content="Dumebi Iwuchukwu">
 
     <!-- mobile specific metas
