--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         </div>
         <div class="row contact__main">
             <div class="col-eight tab-full contact__form">
-                <form name="contactForm" id="contactForm" method="post" action="">
+                <form name="contactForm" id="contactForm" method="post" action="/thank-you" data-netlify="true">
                     <fieldset>
 
                     <div class="form-field">
