--- a/minimalist_design_love.html
+++ b/minimalist_design_love.html
@@ -13,7 +13,31 @@
     <title>Dumebi Iwuchukwu - Minimalist Design Love.</title>
     <meta name="description" content="">
     <meta name="author" content="Dumebi Iwuchukwu">
+    <meta name="description" content="This is where I share my insights, findings and experiences.">
+    <meta name="theme-color" content="#449cff"/>
 
+    <link rel="canonical" href="https://www.dum3bi.com/blog.html">
+    <meta property="og:site_name" content="Dumebi Iwuchukwu's Blog">
+    <meta property="og:locale" content="en_GB">
+    <meta property="article:publisher" content="https://www.facebook.com/iwuchukwu.dumebi">
+    <meta name="twitter:site" content="@dum3bi">
+    <meta name="twitter:creator" content="@dum3bi">
+
+    <meta property="og:url" content="https://www.dum3bi.com/blog.html">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Dum3bi- Personal Blog of Dumebi Iwuchukwu Micheal.">
+    <meta property="og:description" content="This is where I share my insights, findings and experiences.">
+    <meta property="og:image" content="https://www.dum3bi.com/images/logo.png">
+    <meta property="og:image:alt" content="Dumebi's logo">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Dumebi Iwuchukwu">
+    <meta name="twitter:description" content="This is where I share my insights, findings and experiences.">
+    <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.png">
+
+    <meta property="og:type" content="website">
+
+    <meta name="keywords" content="Dumebi Iwuchukwu,Dumebi Nnadirinwa Iwuchukwu, Chukwudumebi Iwuchukwu, Chukwudumebi Iwuchukwu Micheal, Art Manager, Brand Strategist, Developer, Strategy, Digital Marketing Strategy, Email marketing, Online Advertising, Creative, Lagos, Ozubulu,  Nigeria">
+    <meta name="author" content="Dumebi Iwuchukwu">
     <!-- mobile specific metas
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
